feat: support for ! operators [DHIS2-16459]